--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 		<a href="http://www.orpheus-music.org/v3/"> 自動作曲　オルフェウス </a> <br>
 		<a href="http://hil.t.u-tokyo.ac.jp/software/Eurydice/"> 自動伴奏　ユリディス </a> <br>
 		</p>
+
+		<h3> リンク </h3>
+		<p>
+			国立情報学研究所
+		</p>
       </header>
       <section>
 
